# totp_clipboard

./: Cargo.toml  README.md
src/: main.rs  seeds.rs
src/applet/: mod.rs  ui.rs
src/configui/: mod.rs  seed_editor.rs  ui.rs
