[package]
name = "totp_clipboard"
version = "0.1.0"
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]

readme = "README.md"
keywords = ["totp", "systray", "application"]
categories = ["GUI", "Authentication"]
description = """GUI TOTP client to get totp code in two click."""
license = "BSD-3-Clause"
#documentation = "https://docs.rs/crate/totp_clipboard"
homepage = "https://github.com/mardiros/totp_clipboard"
repository = "https://github.com/mardiros/totp_clipboard"


[[bin]]
name = "totp-clipboard"
path = "src/main.rs"

[dependencies]

log = "^0.4"
pretty_env_logger = "^0.2"

libreauth = "^0.8.0"
clipboard = "^0.4.6"
serde_json = "^1.0"
libappindicator= { git = "https://github.com/mardiros/libappindicator-rs", branch = "features/update-gtk" }

gtk = "0.4"
gdk = "^0.8.0"

relm = "^0.14.4"
relm-derive =  "^0.14.4"

[features]
default = ["gtk_3_22"]
gtk_3_10 = ["gtk/v3_10"]
gtk_3_16 = ["gtk_3_10", "gtk/v3_16"]
gtk_3_18 = ["gtk_3_16", "gtk/v3_18"] #for CI tools
gtk_3_20 = ["gtk_3_18", "gtk/v3_20"] #for CI tools
gtk_3_22 = ["gtk_3_20", "gtk/v3_22"] #for CI tools
