[package]
name = "totp_clipboard"
version = "0.1.0"
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]
edition = "2018"

readme = "README.md"
keywords = ["totp", "systray", "application"]
categories = ["GUI", "Authentication"]
description = """GUI TOTP client to get totp code in two click."""
license = "BSD-3-Clause"
#documentation = "https://docs.rs/crate/totp_clipboard"
homepage = "https://github.com/mardiros/totp_clipboard"
repository = "https://github.com/mardiros/totp_clipboard"


[[bin]]
name = "totp-clipboard"
path = "src/main.rs"

[dependencies]

clipboard = "0.5.0"
dirs = "2.0"
gtk = "0.8.1"
gtk-sys = "0.9.2"
libappindicator = "0.5.1"
libreauth = "0.13.0"
serde_json = "1.0.48"
