[package]
name = "totp_clipboard"
version = "0.2.2"
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]
edition = "2018"

readme = "README.md"
keywords = ["totp", "systray", "application"]
categories = ["GUI", "Authentication"]
description = """GUI TOTP client to get totp code in two click."""
license = "BSD-3-Clause"
#documentation = "https://docs.rs/crate/totp_clipboard"
homepage = "https://github.com/mardiros/totp_clipboard"
repository = "https://github.com/mardiros/totp_clipboard"


[[bin]]
name = "totp-clipboard"
path = "src/main.rs"

[dependencies]

clipboard = "0.5.0"
dirs = "4.0"
gtk = "0.15"
gtk-sys = "0.15"
libappindicator = "0.7.1"
libreauth = "0.15.0"
serde_json = "1.0.89"
